--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.8.0", features = ["dynamic"] }
+bevy = { version = "0.8.0", features = [ "dynamic" ]} # can't use dynamic for wasm build
 bevy_prototype_lyon = "0.6.0"
 rand = "0.8.5"
-bevy_rapier2d = { version = "0.16.2", features = ["parallel"]}
+bevy_rapier2d = { version = "0.16.2" } # can't use parrallel for wasm build
 bevy_prototype_debug_lines = "0.8.1"
 lazy_static = "1.4.0"
 # Enable a small amount of optimization in debug mode
@@ -19,3 +19,10 @@ opt-level = 1
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
+
+[patch.crates-io]
+wasm-bindgen = { git = 'https://github.com/rustwasm/wasm-bindgen' }
+web-sys = { git = 'https://github.com/rustwasm/wasm-bindgen' }
+
+[target.wasm32-unknown-unknown]
+runner = "wasm-server-runner"
